--- a/style.css
+++ b/style.css
@@ -3,14 +3,16 @@
 }
 
 header {
-    background-color: darkblue;
+    background: linear-gradient(darkblue, blue);
     color: whitesmoke;
+    height: 15vh;
 }
 
 footer {
-    background-color: darkblue;
+    background: linear-gradient(darkblue, blue);
     color: whitesmoke;
     margin-top: 2rem;
+    padding: 1rem;
 }
 
 h1 {
@@ -23,8 +25,9 @@ h3 {
     text-align: center;
 }
 
-ul {
+.lista {
     list-style-type:none;
+    margin-top: 1rem;
 }
 
 ul li {
@@ -40,19 +43,20 @@ li a {
     display: flex;
     flex-direction: column;
     height: 65vh;
+    width: 100%;
 }
 
 
 .login {
-    border: solid 1px black;
-    width: 70vw;
+    box-shadow: 16px 10px 30px -17px rgba(0,0,0,0.74);
     padding: 10px;
+    border-radius: 25px;
     background-color: lightgrey;
     display: flex;
     align-self: center;
     justify-content: center;
     flex-direction: column;
-    margin: 15px;
+    margin: 1rem 3rem;
 }
 
 .formulario {
@@ -71,7 +75,7 @@ li a {
     margin-left: 1.5rem;
 }
 
-#boton {
+.boton {
     font-weight: bold;
     margin: 5px;
     padding: 5px;
@@ -99,9 +103,12 @@ li a {
 }
 
 .logo {
-    filter: brightness(1.1);
-    mix-blend-mode: multiply;
-    width: 35%;
+    display: block;
+    width: 5rem;
+    height: 5rem;
+}
+
+.div-logo {
     display: inline-block;
 }
 
@@ -115,18 +122,49 @@ li a {
 
 .cuenta {
     text-align: left;
-    margin: 10px;
+    margin: 15px;
 }
 
 #cuentas {
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    max-width: 60vw;
 }
 
+.conversor, .simulador {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+    background-color: lightgray;
+    margin: 2rem;
+    border-radius: 25px;
+    box-shadow: 16px 10px 30px -17px rgba(0,0,0,0.74);
+}
+
+.sin-borde {
+    border: none;
+    border-bottom: 2px solid white;
+    border-radius: 5px;
+}
+
+.sin-borde:focus {
+    outline: none;
+    border-bottom: 2.4px solid blue;
+}
+
+.center {
+    text-align: center;
+}
 
 @media (min-width: 768px) {
 
     .principal {
         flex-direction: row;
+        margin-bottom: 0px;
     }
 
     .tabla-bootstrap {
@@ -162,5 +200,30 @@ li a {
 
     footer {
         margin-top: 0px;
+    }
+
+    .login, .conversor {
+        max-width: 50vw;
+        position: absolute;
+        left: 30%;
+    }
+
+    .simulador {
+        position: absolute;
+        left: 40%;
+    }
+
+    .logo {
+        position: absolute;
+        top: 1rem;
+        left: 0.3125rem;
+        width: 6rem;
+        height: 6rem;
+    }
+}
+
+@media (max-width: 360px) {
+    .oculto {
+        display: none;
     }
 }
