--- a/views/index.html
+++ b/views/index.html
@@ -69,6 +69,7 @@
                 </div>
             </div>
         </div>
+    </section>
     <footer>
         <p>Términos de uso</p>
         <p>Políticas de privacidad</p>
