Nueva estructura carpetas

--- a/src/app/css/Conversor.css
+++ b/src/app/css/Conversor.css
@@ -1,5 +1,5 @@
 .conversor{
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
