--- a/src/app/css/Transfers.module.css
+++ b/src/app/css/Transfers.module.css
@@ -1,12 +1,28 @@
-#transferencias {
+.tablaBootstrap {
     display: inline-flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    gap: 1rem;
 }
 
-#tabla-pago1 {
-    width: 80%;
+.detalle a{
+    text-decoration: underline;
+    color: black;
+}
+
+@media (min-width: 768px) {
+    .tablaBootstrap {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        width: 80%;
+    }
+
+    #transferencias {
+        width: 80%;
+    }
 }
 
 @media (max-width: 450px) {
