--- a/src/app/css/NewTransfer.css
+++ b/src/app/css/NewTransfer.css
@@ -8,9 +8,11 @@
     box-shadow: 16px 10px 30px -17px rgba(0,0,0,0.3);
     padding: 1rem;
     background-color: lightgray;
-    margin: 2rem;
+    margin: auto;
+    margin-top: 2rem;
     border-radius: 25px;
     text-align: center;
+    width: 80%;
 }
 
 .boton-transferencia{
@@ -28,4 +30,13 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+@media (min-width: 768px) {
+    .contenedor-form{
+        margin: auto;
+        margin-top: 2rem;
+        width: 50%;
+    }
+
 }
