--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,16 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+footer a{
+   text-decoration: none;
+   color: white;
+}
+
+@media (min-width: 768px) {
+    .principal {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 0px;
+    }
+}
